Adds kafka extension

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -25,13 +25,13 @@ services {
       host: "127.0.0.1"
       host: ${?POSTGRES_HOST}
 
-      db: "agent"
+      db: "test"
       db: ${?POSTGRES-DB}
 
-      user: "agent"
+      user: "test"
       user: ${?POSTGRES-USERNAME}
 
-      password: "agent"
+      password: "test"
       password: ${?POSTGRES_PASSWORD}
       port: 5432
 
