Adds code for supporting cluster sharding

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -1,3 +1,39 @@
+node-id-in-cluster = "node1"
+
+http {
+  listen-address {
+    host: "0.0.0.0"
+    port: 8080
+  }
+}
+
+akka {
+  loglevel = "debug"
+  actor {
+    provider: "akka.cluster.ClusterActorRefProvider"
+    serializers {
+      nasim = "serializer.ActorClusterSerializer"
+    }
+    serialization-bindings {
+      "scalapb.GeneratedMessage" = nasim
+    }
+  }
+  cluster {
+    min-nr-of-members = 1
+    seed-nodes = [
+    ]
+  }
+  remote {
+    netty.tcp {
+      hostname = "127.0.0.1"
+      port = 2552
+    }
+  }
+}
+
+akka.extensions = ["akka.cluster.client.ClusterClientReceptionist"]
+
+
 redis {
   port: 6379
   port: ${?REDIS_PORT}
